overflow problem resolved

--- a/src/pages/Templates.css
+++ b/src/pages/Templates.css
@@ -24,7 +24,6 @@
 
 .template-hero-section p {
     color: #594a4e;
-    /* margin: 0 auto 2rem; */
     text-align: justify;
     line-height: 1.6rem;
 }
@@ -144,7 +143,7 @@
     padding: 1rem;
 }
 
-.modal-content {
+/* .modal-content {
     background-color: #fff;
     border-radius: 0.75rem;
     max-width: 37.5rem;
@@ -153,7 +152,34 @@
     overflow-y: auto;
     padding: 1.5rem;
     position: relative;
+} */
+
+.modal-content {
+  background-color: #fff;
+  border-radius: 0.75rem;
+  max-width: 37.5rem;
+  width: 100%;
+  height: auto;            
+  max-height:80vh;       
+  padding: 1.5rem;
+  position: relative;
+ overflow-y: auto;          
+  overflow-x: hidden;
+    display: flex;
+  flex-direction: column;
 }
+
+.modal-content pre {
+  white-space: pre-wrap;    
+  word-wrap: break-word;    
+  overflow-x: auto;         
+  overflow-y: hidden;       
+  max-height: 100%;         
+  margin: 0;
+  font-family: inherit;
+}
+
+
 
 .modal-close {
     position: absolute;
